Alias /donate to knowledgebase

--- a/data/knowledgebase/rules.ru.textile
+++ b/data/knowledgebase/rules.ru.textile
@@ -1,3 +1,58 @@
 OpenVK-KB-Heading: Правила
 
-Пример правил
+Добро пожаловать на *инстанцию OpenVK* имени Веселкрафта. OpenVK -- социальная сеть с открытым исходным кодом, которая помогает людям поддерживать связь со своими друзьями и заводить новых.
+Администрация этой инстанции разрешает вам пользоваться ею на условиях, которые определены в этом документе (далее по тексту - правила).
+
+h3. Статус этих правил
+
+Эти правила являются черновиком. Мы их ещё дорабатываем и приниманием предложения от пользователей. Но не смотря на это, эти правила всё равно действуют и к Вам могут быть применены санкции из-за их нарушения.
+Эти правила могут изменяться без уведомления. Продолжение использования инстанции OpenVK будет означать согласие с ними.
+
+h3. Область действия этих правил
+
+Эти правила распостраняются только на эту инстанцию OpenVK, а именно на всё, что расположено на домене openvk2.veselcraft.ru (включая все его поддомены).
+За пределами этой инстанции правила не действуют и Вы в праве делать всё, что посчитаете нужным.
+
+h3. Что можно делать?
+
+Делать можно всё, что не запрещено. А запрещено:
+# Не следовать правилам
+# Не отвечать своевременно на запросы от техподдержки или Администрации
+# Выдавать себя за других людей
+## Если это не было разрешено явно другим человеком
+## Если другой человек на самом деле оригинальный персонаж, который принадлежит Вам
+## Также нельзя заходить на чужие страницы без разрешения (взлом жопы)
+# Делать массовые рассылки любым способом
+# Мешать любым образом работе OpenVK
+# Загружать на сайт и с сайта любым образом любое содержимое, которое:
+## Не является законным на територии Нидерландов и Вашей страны проживания:
+### Содержит порнографию с участием несовершеннолетних лиц
+#### Если эти лица не являются вымышленными персонажами
+### Содержит рекламу наркотических препаратов или инструкции по их приготовлению
+### Содержит информацию закрытого доступа
+### Содержит сцены бесчеловечного обращения с животными
+### Нарушает авторские и смежные права
+### Нарушает права человека
+## Содержит спойлеры
+## Мешает другим пользователям исполнять правила
+## Мешает другим пользователям нормально пользоваться OpenVK
+## Администрация может посчитать недопустимым
+# Загружать "adult"-контент на страницах других пользователей без разрешения
+# Обманывать Администрацию и/или _неопределённую_ группу пользователей
+## Неопределённа группа пользователей -- пользователи, которых вы не знаете. Обманывать своих друзей можно.
+# Оскорблять OpenVK и/или Администрацию
+## Если это не оправданно
+# Быть забаненным в OpenVK Chat, /KDE/ или в чате, который располагается по имени traintovos
+# Не уважать Веселкрафта, Косфурлера и Джилл
+
+h3. Санкции за нарушение правил
+
+За нарушение этих правил, мы можем:
+# Проигнорировать нарушение
+# Вынести Вам устное предуреждение
+# Выдать временную или постоянную блокировку
+# Запретить Вам в будущем пользоваться этой инстанцией
+# Удалить Ваш контент и/или аккаунт
+
+Определение наказания и его последующее исполнение - обязанность Администрации.
+Также мы оставляем за собой право применить санкции к Вам не объясняя причин (если они вообще будут).
