Forgot to add one character

--- a/locales/by_lat.strings
+++ b/locales/by_lat.strings
@@ -290,7 +290,7 @@
 "privacy_setting_access_page" = "Kamu ŭ internecie widać maju staronku";
 "privacy_setting_read_info" = "Kamu widać asnoŭnuju infarmacyju majoj staronki";
 "privacy_setting_see_groups" = "Kamu widać maje supołki i sustreczy";
-"privacy_setting_see_photos" = "Kamu widać maje fatazdymki;
+"privacy_setting_see_photos" = "Kamu widać maje fatazdymki";
 "privacy_setting_see_videos" = "Kamu widać maje wideazapisy";
 "privacy_setting_see_notes" = "Kamu widać maje natatki";
 "privacy_setting_see_friends" = "Kamu widać maich siabroŭ";
