--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1,4 +1,5 @@
 "__locale" = "ru_UA.utf8;ru_RU.UTF-8;Rus";
+"__WinEncoding" = "Windows-1251";
 
 %{ Check for https://www.unicode.org/cldr/charts/latest/supplemental/language_plural_rules.html %}
 
