--- a/README.textile
+++ b/README.textile
@@ -12,7 +12,7 @@ h2. Can I create my own OpenVK instance?
 
 Yes! And you're very welcome to.
 However, OVK makes use of Chandler Application Server. This software requires extensions, that may not be provided by your hosting provider (namely, sodium and yaml. this extensions are available on most of ISPManager hostings).
-Simply put, we would recommend you to use latest CentOS (running on your own VDS/Dedicated) with latest PHP from EPEL. We use this configuration on our "testing instance":https://openvk2.veselcraft.ru/ and thus will be able to provide quicker support for OVK running in this environment.
+Simply put, we would recommend you to use latest CentOS (running on your own VDS/Dedicated) with latest PHP from EPEL. We used to have this configuration on our "testing instance":https://openvk2.veselcraft.ru/ and thus will be able to provide quicker support for OVK running in this environment. Currently we use Windows Server 2012R2 with IIS and PHP from Web Marketplace and you can use this setup too and expect some support with it.
 If you want, you can add your instance to the list above so that people can register there.
 
 h3. Installation procedure
