Fixed some links

--- a/README.textile
+++ b/README.textile
@@ -1,7 +1,7 @@
 h1. OpenVK 2
 
 *OpenVK* is an attempt to create a simple CMS that -cosplays- imitates old VK. Code provided here is not stable yet.
-To be honest, we don't even know whether it even works. However, this version (unlike classic) is maintained and we will be happy to accept your bugreports "in our bug-tracker":https://phabricator.dsrev.ru/project/view/1/. You should also be able to submit them using "ticketing system":https://openvk2.veselcraft.ru/support?act=new (you will need an OVK account for this).
+To be honest, we don't even know whether it even works. However, this version (unlike classic) is maintained and we will be happy to accept your bugreports "in our bug-tracker":https://github.com/openvk/openvk/projects/1. You should also be able to submit them using "ticketing system":https://openvk.su/support?act=new (you will need an OVK account for this).
 
 h2. Instances
 
@@ -11,7 +11,7 @@ h2. Can I create my own OpenVK instance?
 
 Yes! And you're very welcome to.
 However, OVK makes use of Chandler Application Server. This software requires extensions, that may not be provided by your hosting provider (namely, sodium and yaml. this extensions are available on most of ISPManager hostings).
-Simply put, we would recommend you to use latest CentOS (running on your own VDS/Dedicated) with latest PHP from EPEL. We used to have this configuration on our "testing instance":https://openvk2.veselcraft.ru/ and thus will be able to provide quicker support for OVK running in this environment. Currently we use Windows Server 2012R2 with IIS and PHP from Web Marketplace and you can use this setup too and expect some support with it.
+Simply put, we would recommend you to use latest CentOS (running on your own VDS/Dedicated) with latest PHP from EPEL. We used to have this configuration on our "testing instance":https://openvk.su/ and thus will be able to provide quicker support for OVK running in this environment. Currently we use Windows Server 2012R2 with IIS and PHP from Web Marketplace and you can use this setup too and expect some support with it.
 If you want, you can add your instance to the list above so that people can register there.
 
 h3. Installation procedure
@@ -44,7 +44,7 @@ You also not required to publish source texts of your themepacks and plugins.
 h2. Where can I get assistance?
 
 You may reach out to us via:
-* "Bug-tracker":https://phabricator.dsrev.ru/project/view/1/
+* "Bug-tracker":https://github.com/openvk/openvk/projects/1
 * "Ticketing system":https://openvk.su/support?act=new
 * "Telegram chat":https://t.me/openvkchat
 * "Reddit":https://www.reddit.com/r/openvk/
