--- a/README.textile
+++ b/README.textile
@@ -1,59 +1,1 @@
-h1. OpenVK 2
-
-*OpenVK* is an attempt to create a simple CMS that -cosplays- imitates old VK. Code provided here is not stable yet.
-To be honest, we don't even know whether it even works. However, this version is maintained and we will be happy to accept your bugreports "in our bug-tracker":https://github.com/openvk/openvk/projects/1. You should also be able to submit them using "ticketing system":https://openvk.su/support?act=new (you will need an OVK account for this).
-
-h2. Instances
-
-* *"openvk.su":https://openvk.su/*
-
-h2. Can I create my own OpenVK instance?
-
-Yes! And you're very welcome to.
-However, OVK makes use of Chandler Application Server. This software requires extensions, that may not be provided by your hosting provider (namely, sodium and yaml. this extensions are available on most of ISPManager hostings).
-Simply put, we would recommend you to use latest CentOS (running on your own VDS/Dedicated) with latest PHP from EPEL. We used to have this configuration on our "testing instance":https://openvk.su/ and thus will be able to provide quicker support for OVK running in this environment. Currently we use Windows Server 2012R2 with IIS and PHP from Web Marketplace and you can use this setup too and expect some support with it.
-If you want, you can add your instance to the list above so that people can register there.
-
-h3. Installation procedure
-
-# Install Composer, Node.js, Yarn and "Chandler":https://github.com/openvk/chandler
-# Install "commitcaptcha":https://github.com/openvk/commitcaptcha and OpenVK as Chandler extensions and enable them like this:
-@ln -s /path/to/chandler/extensions/available/commitcaptcha /path/to/chandler/extensions/enabled/@
-@ln -s /path/to/chandler/extensions/available/openvk /path/to/chandler/extensions/enabled/@
-# Import install/init-static-db.sql to *same database* you installed Chandler to
-# Import install/init-event-db.sql to *separate database*
-# Rename openvk-example.yml to openvk.yml and change options
-# Run @composer install@ in OpenVK directory
-# Move to Web/static/js and execute @yarn install@
-# Set openvk as your root app in chandler.yml
-
-Once you are done, you can login as a system administrator on the network itself (no registration required):
-* *Login*: admin@localhost.localdomain6
-* *Password*: admin
-It is recommended to change the password before using the built-in account.
-
-h3. Can I upgrade my OpenVK Classic installation?
-
-Right now not. But we will add upgrading script soon.
-
-h3. If my website uses OpenVK, should I publish it's soures?
-
-You are encouraged to do so. We don't enforce this though. You can keep your sources to yourself (unless you distribute your OpenVK distro to other people).
-You also not required to publish source texts of your themepacks and plugins.
-
-h2. Where can I get assistance?
-
-You may reach out to us via:
-* "Bug-tracker":https://github.com/openvk/openvk/projects/1
-* "Ticketing system":https://openvk.su/support?act=new
-* "Telegram chat":https://t.me/openvkchat
-* "Reddit":https://www.reddit.com/r/openvk/
-* "Discussions":https://github.com/openvk/openvk/discussions
-
-*Attention*: bug tracker and telegram chat are public places. And ticketing system is being served by volounteers. If you need to report something, that shouldn't be immediately disclosed to general public (for instance, vulnerability report), *please use contact us directly*:
-* *Head of OpenVK Security Commitee*: stingray@jill.pl or "@id155":https://t.me/id155
-* *Backend developer*: "@saddyteirusu":https://t.me/saddyteirusu
-
-h2. Release. When.
-
-February 2021?
+t.me/realstoplamers
