--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -174,6 +174,8 @@
 "administrator" = "Администратор";
 "promote_to_admin" = "Повысить до администратора";
 "devote" = "Разжаловать";
+"group_allow_post_for_everyone" = "Разрешить публиковать записи всем";
+"statistics" = "Статистика";
 
 "participants_zero" = "Ни одного участника";
 "participants_one" = "Один участник";
