--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -206,6 +206,9 @@
 "photo" = "Фотография";
 "upload_button" = "Загрузить";
 
+"avatar_album" = "Фотографии со страницы";
+"wall_album" = "Фотографии со стены";
+
 "albums_zero" = "Ни одного альбома";
 "albums_one" = "Один альбом";
 "albums_few" = "$1 альбома";
