--- a/README.textile
+++ b/README.textile
@@ -17,16 +17,16 @@ If you want, you can add your instance to the list above so that people can regi
 
 h3. Installation procedure
 
-# Install Composer, Node.js, Yarn and "Chandler":https://github.com/openvk/chandler
-# Install "commitcaptcha":https://github.com/openvk/commitcaptcha and OpenVK as Chandler extensions and enable them like this:
+1. Install Composer, Node.js, Yarn and "Chandler":https://github.com/openvk/chandler
+2. Install "commitcaptcha":https://github.com/openvk/commitcaptcha and OpenVK as Chandler extensions and enable them like this:
 @ln -s /path/to/chandler/extensions/available/commitcaptcha /path/to/chandler/extensions/enabled/@
 @ln -s /path/to/chandler/extensions/available/openvk /path/to/chandler/extensions/enabled/@
-# Import install/init-static-db.sql to *same database* you installed Chandler to
-# Import install/init-event-db.sql to *separate database*
-# Rename openvk-example.yml to openvk.yml and change options
-# Run @composer install@ in OpenVK directory
-# Move to Web/static/js and execute @yarn install@
-# Set openvk as your root app in chandler.yml
+3. Import install/init-static-db.sql to *same database* you installed Chandler to
+4. Import install/init-event-db.sql to *separate database*
+5. Rename openvk-example.yml to openvk.yml and change options
+6. Run @composer install@ in OpenVK directory
+7. Move to Web/static/js and execute @yarn install@
+8. Set openvk as your root app in chandler.yml
 
 Once you are done, you can login as a system administrator on the network itself (no registration required):
 * *Login*: admin@localhost.localdomain6
