--- a/README.textile
+++ b/README.textile
@@ -1,8 +1,12 @@
-h1. OpenVK 2
+h1. OpenVK
 
 *OpenVK* is an attempt to create a simple CMS that -cosplays- imitates old VK. Code provided here is not stable yet.
 VKontakte belongs to Pavel Durov and mail.ru.
 To be honest, we don't even know whether it even works. However, this version is maintained and we will be happy to accept your bugreports "in our bug-tracker":https://github.com/openvk/openvk/projects/1. You should also be able to submit them using "ticketing system":https://openvk.su/support?act=new (you will need an OVK account for this).
+
+h2. When's the release?
+
+OVK is far from perfect, but it already has enough features to deploy its instance. There is no exact release date.
 
 h2. Instances
 
@@ -16,6 +20,8 @@ Simply put, we would recommend you to use latest CentOS (running on your own VDS
 If you want, you can add your instance to the list above so that people can register there.
 
 h3. Installation procedure
+
+"samukhin":https://github.com/samuhin is working on a Docker container that contains a microblog version of OpenVK, see "#76":https://github.com/openvk/openvk/pull/76 for details. (Experimental)
 
 # Install Composer, Node.js, Yarn and "Chandler":https://github.com/openvk/chandler
 # Install "commitcaptcha":https://github.com/openvk/commitcaptcha and OpenVK as Chandler extensions and enable them like this:
@@ -33,11 +39,7 @@ Once you are done, you can login as a system administrator on the network itself
 * *Password*: admin
 It is recommended to change the password before using the built-in account.
 
-h3. Can I upgrade my OpenVK Classic installation?
-
-Right now not. But we will add upgrading script soon.
-
-h3. If my website uses OpenVK, should I publish it's soures?
+h3. If my website uses OpenVK, should I publish it's sources?
 
 You are encouraged to do so. We don't enforce this though. You can keep your sources to yourself (unless you distribute your OpenVK distro to other people).
 You also not required to publish source texts of your themepacks and plugins.
@@ -47,14 +49,10 @@ h2. Where can I get assistance?
 You may reach out to us via:
 * "Bug-tracker":https://github.com/openvk/openvk/projects/1
 * "Ticketing system":https://openvk.su/support?act=new
-* "Telegram chat":https://t.me/openvkchat
+* Telegram chat: Go to "our channel":https://t.me/openvkch and open discussion in our channel menu.
 * "Reddit":https://www.reddit.com/r/openvk/
 * "Discussions":https://github.com/openvk/openvk/discussions
 
-*Attention*: bug tracker and telegram chat are public places. And ticketing system is being served by volounteers. If you need to report something, that shouldn't be immediately disclosed to general public (for instance, vulnerability report), *please use contact us directly*:
+*Attention*: bug tracker and telegram chat are public places. And ticketing system is being served by volunteers. If you need to report something, that shouldn't be immediately disclosed to general public (for instance, vulnerability report), *please use contact us directly*:
 * *Head of OpenVK Security Commitee*: stingray@jill.pl or "@id155":https://t.me/id155
 * *Backend developer*: "@saddyteirusu":https://t.me/saddyteirusu
-
-h2. Release. When.
-
-February 2021?
