Armenian locale for OpenVK
Deleting of unnecessary symbol.

--- a/locales/am.strings
+++ b/locales/am.strings
@@ -37,7 +37,7 @@
 "online" = "Օնլայն";
 "was_online" = "եղել է ցանցում";
 "was_online_m" = "եղել է ցանցում";
-"was_online_f" = ""եղել է ցանցում";
+"was_online_f" = "եղել է ցանցում";
 "all_title" = "Բոլորը";
 "information" = "Ինֆորմացիա";
 "status" = "Ստատուս";
