User: Now the User's page can be marked as Deceased. And now the user can be Incognito (at least, admins)
To mark the page as Deceased, type  in  field in Database. To be Incognito, type  in  field.

Specially for deceased drbream

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -36,13 +36,14 @@
 "online" = "Online";
 "was_online" = "was online";
 "was_online_m" = "was online"; 
-%{ For male and femail %}
+%{ For male and female %}
 
 "was_online_f" = "was online";
 "all_title" = "All";
 "information" = "Information";
 "status" = "Status";
 "no_information_provided" = "No information provided.";
+"deceased_person" = "Deceased person";
 
 "relationship" = "Relationship";
 
