--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -42,6 +42,7 @@
 "information" = "Информация";
 "status" = "Статус";
 "no_information_provided" = "Информация отсутствует.";
+"deceased_person" = "Страница покойного человека";
 
 "relationship" = "Семейное положение";
 
