--- a/locales/am.strings
+++ b/locales/am.strings
@@ -42,6 +42,7 @@
 "information" = "Ինֆորմացիա";
 "status" = "Ստատուս";
 "no_information_provided" = "Ինֆորմացիան բացակայում է";
+"deceased_person" = "Մահացած մարդ";
 
 "relationship" = "Ընտանեկան դրություն";
 
